<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibercivis.stopamianto.SignUp"
    android:orientation="vertical"
    android:background="@color/dark">



        <LinearLayout
            android:id="@+id/centro_logos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="18dp"
            >

            <ImageView
                android:id="@+id/logologin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_stop_amianto"
                android:transitionName="logo_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/titulo_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="-12dp"
                    android:fontFamily="@font/avenir"
                    android:text="STOP"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryColor"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/titulo_amianto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir"
                    android:text="AMIANTO"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryColor"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/contenido_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:paddingHorizontal="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign1"
        android:textSize="40sp"
        android:transitionName="logo_text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/sign2"
        android:textSize="18sp"
        android:transitionName="logo_desc"
        android:textColor="@color/textoClaro"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:transitionName="username_tran"
            android:textColorHint="@color/textoOscuro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#ffffff"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign4"
            android:textColorHint="@color/textoOscuro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#ffffff"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign5"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textoOscuro"
            android:textColorHint="@color/textoOscuro"
            android:transitionName="password_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#ffffff"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign6"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textoOscuro"
            android:textColorHint="@color/textoOscuro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#ffffff"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/entrar_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/primaryLightColor"
        android:text="@string/sign7"
        android:textColor="#fff"
        android:transitionName="btn1_tran"
        />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="#00000000"
        android:elevation="0dp"
        android:fontFamily="@font/antic"
        android:text="@string/sign8"
        android:textColor="@color/textoClaro"
        android:transitionName="btn2_tran"/>

</LinearLayout>




    <LinearLayout
        android:id="@+id/proteccion_datos"
        android:layout_width="match_parent"
        android:layout_height="770dp"
        android:background="#A4363030"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/marcobotonsolido"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="PROTECCIÓN DE DATOS"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkdatos1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Para el disfrute de nuestra app, usted acepta nuestra Política de
Privacidad: https://ibercivis.es/politica-de-privacidad/"
                    android:textSize="12sp"
                    android:autoLink="phone|web"
                    android:textColor="@color/white"
                    android:textColorLink="@color/colorApagado"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkdatos2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="AUTORIZO (como mayor de edad o como responsable legal de un menor de 14 años) a la toma de
imágenes fotográficas con la única finalidad de archivo y difusión."
                    android:textSize="12sp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_datos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/primaryColor"
                    android:paddingHorizontal="12dp"
                    android:text="volver"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/acept_datos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/primaryLightColor"
                    android:paddingHorizontal="12dp"
                    android:text="acepto"
                    android:textColor="#fff" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cargando"
        android:layout_width="match_parent"
        android:layout_height="770dp"
        android:background="#A4363030"
        android:gravity="center"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/marcobotonsolido">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_wait"
                android:fontFamily="sans-serif-condensed"/>

            <ProgressBar
                android:layout_marginTop="8dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>