<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ibercivis.stopamianto.Report"
    android:background="@color/dark">



    <LinearLayout
        android:id="@+id/centro_logos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="18dp"
        >

        <ImageView
            android:id="@+id/logologin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_stop_amianto"
            android:transitionName="logo_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">

            <TextView
                android:id="@+id/titulo_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="-12dp"
                android:fontFamily="@font/avenir"
                android:text="STOP"
                android:textAlignment="center"
                android:textColor="@color/secondaryColor"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/titulo_amianto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:text="AMIANTO"
                android:textAlignment="center"
                android:textColor="@color/secondaryColor"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/report_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/centro_logos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/report1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:transitionName="logo_text" />

    <LinearLayout
        android:id="@+id/contenido_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_title"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/card_shape"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/reporte_fase1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:background="@color/transparente"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@color/transparente"
                android:text="@string/report2"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparente"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_tejado"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/logo_stop_amianto" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_tejado"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:background="@color/transparente"
                        android:text="@string/report6"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_deposito"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/logo_stop_amianto" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_deposito"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:background="@color/transparente"
                        android:text="@string/report7"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_tuberia"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/logo_stop_amianto" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_tuberia"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:background="@color/transparente"
                        android:text="@string/report8"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparente"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_escombros"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/logo_stop_amianto" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_escombros"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:background="@color/transparente"
                        android:text="@string/report9"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_otros"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/logo_stop_amianto" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_otros"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:background="@color/transparente"
                        android:text="@string/report10"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reporte_aceptarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/colorBottonUp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/btn_continuar"
            android:textColor="#fff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparente"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/reporte_image_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:background="@color/transparente"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/textoClaro"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/reporte_backfaseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:layout_toRightOf="@id/reporte_image_arrow"
                android:background="@color/transparente"
                android:text="@string/btn_back"
                android:textColor="@color/textoClaro"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/reporte_faseTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_alignParentRight="true"
                android:background="@color/transparente"
                android:text="Fase 1/4"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cargando"
        android:layout_width="match_parent"
        android:layout_height="770dp"
        android:background="#A4363030"
        android:gravity="center"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/marcobotonsolido">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Por favor, espere..."
                android:fontFamily="sans-serif-condensed"/>

            <ProgressBar
                android:layout_marginTop="8dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>